# mysqlpp

./: CMakeLists.txt  README.md  main.cpp  mysql_except.hpp  mysqlpp.cbp  mysqlpp.hpp  mysqlpp.project  mysqlpp.sln  mysqlpp.vcxproj  mysqlpp.vcxproj.filters  mysqlpp.workspace  mysqlpp_connection.cpp  mysqlpp_connection.hpp  mysqlpp_exception.hpp  mysqlpp_pool.cpp  mysqlpp_pool.hpp  mysqlpp_result.cpp  mysqlpp_result.hpp  mysqlpp_statement.cpp  mysqlpp_statement.hpp  mysqlpp_vs2010_win32.sln  mysqlpp_vs2010_win32.vcxproj  mysqlpp_vs2010_win32.vcxproj.filters  mysqlpp_vs2013_x64.sln  mysqlpp_vs2013_x64.vcxproj  mysqlpp_vs2013_x64.vcxproj.filters
mysqlpp.xcodeproj/: project.pbxproj
mysqlpp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
